@@ -25,6 +25,7 @@ Changes in 3.3 :
 - Remove config option to select between basic and filesystem specific preallocation method (189784)
 - Add patch from amichai which adds easier navigation between torrents in plasma applet (183826)
 - GeoIP database will now get downloaded automatically (and updated every 30 days), so it is no longer distributed with ktorrent
+- Added support for gzip and bzip2 compressed ipfilter files
 
 Changes in 3.2.2 :
 - Fix crash when changing speed limits using system tray menu (188447)
